Attempt to resolve button functionality on mobile browsers

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 /*slider*/
+.button {
+    height: 50px;
+    color: darkslateblue;
+    
+}
 .slider {
     appearance: none;
     width: 300px;
